# do-the-chores

./: README.md  main.py  pyproject.toml
examples/: 0_str.yml  1_list.yml  2_tasks.yml  3.5_tasks_expanded.yml  3_tasks_expanded.yml  4_home_dict.yml
tests/: test_load_file.py
timebot/: file.py  main.py
timebot/models/: models.py
